fixed bg color not covering edges of the screen due to padding of body & html

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+body,
+html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden;
+}
+
 body {
     font-family: "Satoshi", sans-serif;
 }
